fixed logo, Header spacing and video

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ header{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+   
 
 }
 .icon {
@@ -93,13 +94,16 @@ header{
     height: 50px;
     background-color: #FBFBFB;
     background-image: url("../assets/hnm_logo.png");
-    background-size: 90px;
+    background-size: 60px;
     background-repeat: no-repeat;
     background-position: center;
     display: none;
  }
  .nav-mob {
     width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
  }
 .nav-left{
     display: flex;
@@ -113,7 +117,7 @@ header{
     justify-content: center;
     align-items: center;
 }
-.nvb {
+.nav_buttons {
     margin-right: 20px;
     display: flex;
     align-items: center;
@@ -122,30 +126,26 @@ header{
  .clothes-cat {
     margin-right: 40px;
  }
-  @media screen and (min-width: 1024px){
-    .menu-icon{
-        display:none;
-    }
- }
- @media screen and (max-width: 1024px){
-    .nav-left {
-        display: none;
-    }
-    .logo {
-        display: none;
-    }
-    .logo-mob {
-        display: flex;
-    }
-    span {
-        display: none;
-    }
-    .nav-center {
-        display: none;
-    }
-       
- }
+ 
  /* ++++++++++++++++++++++++ Header End ++++++++++++++++++++++++++++++++++++ */
+ /* ++++++++++++++++++++++++ banner ++++++++++++++++++++++++++++++++++++ */
+ .banner {
+    /* margin-top: 5rem;
+    margin-bottom: 7rem; */
+    width: 100%;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* outline: dashed red; */
+ }
+.set-sail {
+    max-width: 1200px;
+    min-width: 100px;
+}
+
+ /* ++++++++++++++++++++++++ banner End ++++++++++++++++++++++++++++++++++++ */
+ /* ++++++++++++++++++++++++ shop section ++++++++++++++++++++++++++++++++++++ */
 .shop {
     width: 100%;
     height: 500px;
@@ -157,6 +157,7 @@ header{
    
     
 }
+
  .shop-card {
     width: 250px;
     height: 300px;
@@ -198,3 +199,56 @@ header{
     background-position: center;
  }
  
+
+
+
+
+
+
+
+ @media screen and (min-width: 1024px){
+    .menu-icon{
+        display:none;
+    }
+ }
+ @media screen and (max-width: 1024px){
+    .menu-icon {
+        display: flex;
+        height: fit-content;
+    }
+    .nav-left {
+        display: none;
+    }
+    .nav-right {
+        margin-right: 0;
+        
+    }
+    .nav-right .nav_buttons {
+        margin-right: 20px;
+    }
+
+    .logo {
+        display: none;
+    }
+    .logo-mob {
+        display: flex;
+    }
+    span {
+        display: none;
+    }
+    .nav-center {
+        display: none;
+    }
+    .banner {
+        height: 530px;
+    }
+    .icon {
+        width: 24px;
+        height: 24px;
+    }
+    header {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+       
+ }
